Added basic structure

--- a/index.html
+++ b/index.html
@@ -4,8 +4,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/normalize.css">
     <title>Home</title>
+    <meta name="author" content="Johnny Sanabria">
+    <meta name="description" content="WDD 231 Course Home Page">
+    <script src="scripts/index.js" defer></script>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Chamber</a>
+            <a href="https://github.com/JohnnyASan">GitHub Profile</a>
+            <a href="https://www.linkedin.com/in/johnny-sanabria-b9b34a133/">LinkedIn</a>
+        </nav>
+    </header>
+    <main>
+        <section class="section-1">
+            <h2>Course Work</h2>
+        </section>
+        <section class="section-2">
+            <h2>Utah, USA</h2>
+        </section>
+        <section class="section-3">
+            <h2>Web and Computer Programming Certificate</h2>
+        </section>
+    </main>
+    <footer>
+        <p>
+            <span id="currentyear"></span> 🎸
+            <span>Johnny Sanabria</span> 🎸
+            <span>Utah, USA</span>
+        </p>
+        <p id="lastModified"></p>
+    </footer>
 </body>
 </html>
