added some more stuff

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Home</title>
     <meta name="author" content="Johnny Sanabria">
     <meta name="description" content="WDD 231 Course Home Page">
@@ -18,19 +19,25 @@
         </nav>
     </header>
     <main>
-        <section class="section-1">
+        <section class="section1">
             <h2>Course Work</h2>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </section>
-        <section class="section-2">
+        <section class="section2">
             <h2>Utah, USA</h2>
+            <img>
         </section>
-        <section class="section-3">
+        <section class="section2">
             <h2>Web and Computer Programming Certificate</h2>
         </section>
     </main>
     <footer>
         <p>
-            <span id="currentyear"></span> 🎸
+            <span id="currentYear"></span> 🎸
             <span>Johnny Sanabria</span> 🎸
             <span>Utah, USA</span>
         </p>
