--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 <body>
     <header>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Chamber</a>
-            <a href="https://github.com/JohnnyASan">GitHub Profile</a>
-            <a href="https://www.linkedin.com/in/johnny-sanabria-b9b34a133/">LinkedIn</a>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Chamber</a></li>
+                <li><a href="https://github.com/JohnnyASan">GitHub Profile</a></li>
+                <li><a href="https://www.linkedin.com/in/johnny-sanabria-b9b34a133/">LinkedIn</a></li>
+            </ul>           
         </nav>
     </header>
     <main>
