added profile image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <img src="images/profile_img.jpg">
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
