--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="images/profile_img.jpg">
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">Chamber</a></li>
                 <li><a href="https://github.com/JohnnyASan">GitHub Profile</a></li>
                 <li><a href="https://www.linkedin.com/in/johnny-sanabria-b9b34a133/">LinkedIn</a></li>
