got everything working and looking nicer

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <section class="webCertificate module">
             <h2>Web and Computer Programming Certificate</h2>
             <div class="certificateFilter">
-                <button class="filterButton active" data-filter="All">All</button>
-                <button class="filterButton" data-filter="CSE">CSE</button>
-                <button class="filterButton" data-filter="WDD">WDD</button>
+                <button class="filterButton active" coursefilter="All">All</button>
+                <button class="filterButton" coursefilter="CSE">CSE</button>
+                <button class="filterButton" coursefilter="WDD">WDD</button>
             </div>
             <div class="coursesList">
                 <!-- Courses to be inserted by JavaScript -->
