--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="images/profile_img.webp" >
+        <img src="images/profile_img.webp" alt="profile picture of Johnny Sanabria">
         <h1>Johnny Sanabria</h1>
     </header>
     <div class="hamburger"></div>
@@ -35,7 +35,7 @@
         <section class="utah module">
             <h2>Utah, USA</h2>
             <figure>
-                <img src="images/wasatch-mountains-utah-utah-images.webp">
+                <img src="images/wasatch-mountains-utah-utah-images.webp" alt="wasatch mountains in utah with lake in foreground">
                 <figcaption>Mountains</figcaption>
             </figure>
         </section>
