resolved html errors

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/normalize.css">
+    <!-- <link rel="stylesheet" href="styles/normalize.css"> -->
     <link rel="stylesheet" href="styles/styles.css">
     <title>Home</title>
     <meta name="author" content="Johnny Sanabria">
@@ -42,13 +43,14 @@
         <section class="webCertificate module">
             <h2>Web and Computer Programming Certificate</h2>
             <div class="certificateFilter">
-                <button class="filterButton active" coursefilter="All">All</button>
-                <button class="filterButton" coursefilter="CSE">CSE</button>
-                <button class="filterButton" coursefilter="WDD">WDD</button>
+                <button class="filterButton active" value="All">All</button>
+                <button class="filterButton" value="CSE">CSE</button>
+                <button class="filterButton" value="WDD">WDD</button>
             </div>
             <div class="coursesList">
                 <!-- Courses to be inserted by JavaScript -->
             </div>
+        </section>
     </main>
     <footer>
         <p>
