added better title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="styles/normalize.css"> -->
     <link rel="stylesheet" href="styles/styles.css">
-    <title>Home</title>
+    <title>Johnny Sanabria's WDD 231 Home Page</title>
     <meta name="author" content="Johnny Sanabria">
     <meta name="description" content="WDD 231 Course Home Page">
     <script src="scripts/index.js" defer></script>
