--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         <img src="images/profile_img.webp" alt="profile picture of Johnny Sanabria">
         <h1>Johnny Sanabria</h1>
     </header>
-    <div class="hamburger"></div>
+    <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
     <nav>
         <ul>
             <li><a href="#" class="active">Home</a></li>
