--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <title>Johnny Sanabria's WDD 231 Home Page</title>
     <meta name="author" content="Johnny Sanabria">
     <meta name="description" content="WDD 231 Course Home Page">
+    <meta property="og:image" content="https://www.skylinepress.com/images/xl/080522-UT-Moonshine-Arch-H2320.jpg">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Johnny's WDD 231 Home Page">
+    <meta property="og:url" content="https://johnnyasan.github.io/wdd231/">
     <script src="scripts/index.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" href="favicon.ico">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
