Fixed hamburger button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span></span>
         <span></span>
     </div>
-    <nav>
+    <nav id="navBar">
         <ul>
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#">Chamber</a></li>
