added og meta for description

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:image" content="https://www.skylinepress.com/images/xl/080522-UT-Moonshine-Arch-H2320.jpg">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Johnny's WDD 231 Home Page">
+    <meta property="og:description" content="Home Page for a Web Development Class at BYU-I.">
     <meta property="og:url" content="https://johnnyasan.github.io/wdd231/">
     <script src="scripts/index.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
