--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Johnny's WDD 231 Home Page">
     <meta property="og:description" content="Home Page for a Web Development Class at BYU-I.">
     <meta property="og:url" content="https://johnnyasan.github.io/wdd231/">
-    <meta property="fb:app_id" content="johnnyasan.github.io/wdd231">
+    <meta property="fb:app_id" content="johnnyasan">
     <script src="scripts/index.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="icon" href="images/favicon.ico">
