added total credits

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
             <div class="coursesList">
                 <!-- Courses to be inserted by JavaScript -->
             </div>
+            <div id="totalCredits">
+
+            </div>
         </section>
     </main>
     <footer>
