trying to apply responsive nav lessons

--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
         <img src="images/profile_img.webp" alt="profile picture of Johnny Sanabria">
         <h1>Johnny Sanabria</h1>
     </header>
-    <div class="hamburger">
+    <button id="hamburgerButton">
+
+    </button>
+    <!-- <div class="hamburger">
         <span></span>
         <span></span>
         <span></span>
-    </div>
+    </div> -->
     <nav id="navBar">
         <ul>
             <li><a href="#" class="active">Home</a></li>
