--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <nav id="navBar">
         <ul>
             <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">Chamber</a></li>
+            <li><a href="./chamber/directory.html">Chamber</a></li>
             <li><a href="https://github.com/JohnnyASan">GitHub Profile</a></li>
             <li><a href="https://www.linkedin.com/in/johnny-sanabria-b9b34a133/">LinkedIn</a></li>
         </ul>           
