got the footer started

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -35,9 +35,24 @@
     <div id="darkMode"></div>
     <main></main>
     <footer>
-        <div id="contactInfo"></div>
-        <div id="socialMedia"></div>
-        <div id="devDetails"></div>
+        <div id="contactInfo" class="footerCell">
+            <p id="contactName"></p>
+            <p id="contactAddress1"></p>
+            <p id="contactAddress2"></p>
+            <p id="contactEmail"></p>
+            <p id="contactPhone"></p>
+        </div>
+        <div id="socialMedia" class="footerCell">
+            <a href="#"><img src="./images/placeholder.png" alt="YouTube"></a>
+            <a href="#"><img src="./images/placeholder.png" alt="X"></a>
+            <a href="#"><img src="./images/placeholder.png" alt="LinkedIn"></a>
+        </div>
+        <div id="devDetails" class="footerCell">
+            <span>WDD231 Class Project</span><br>
+            <span>Johnny Sanabria</span><br>
+            @<span id="currentYear">Naples UT Chamber of Commerce</span><br>
+            <span id="lastModified"></span>
+        </div>
     </footer>
 </body>
 </html>
