got the basic grid showing directory members

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-        <img src="./images/placeholder.png" alt="Chamber of Commerce logo">
+        <img src="./images/dino_logo.jpeg" alt="Chamber of Commerce logo">
         <h1>Naples, Utah</h1>
         <p>Chamber of Commerce</p>
     </header>
@@ -32,27 +32,11 @@
             <li><a href="#" title="Discover">Discover</a></li>
         </ul>
     </nav>
+    
     <div id="darkMode"></div>
-    <main></main>
-    <footer>
-        <div id="contactInfo" class="footerCell">
-            <p id="contactName"></p>
-            <p id="contactAddress1"></p>
-            <p id="contactAddress2"></p>
-            <p id="contactEmail"></p>
-            <p id="contactPhone"></p>
-        </div>
-        <div id="socialMedia" class="footerCell">
-            <a href="#"><img src="./images/placeholder.png" alt="YouTube"></a>
-            <a href="#"><img src="./images/placeholder.png" alt="X"></a>
-            <a href="#"><img src="./images/placeholder.png" alt="LinkedIn"></a>
-        </div>
-        <div id="devDetails" class="footerCell">
-            <span>WDD231 Class Project</span><br>
-            <span>Johnny Sanabria</span><br>
-            @<span id="currentYear">Naples UT Chamber of Commerce</span><br>
-            <span id="lastModified"></span>
-        </div>
-    </footer>
+    <main>
+        <div id="membersList" class="threeColGrid"></div>
+    </main>
+    <footer id="footer"></footer>
 </body>
 </html>
