made footer sticky.

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -35,7 +35,7 @@
     
     <div id="darkMode"></div>
     <main>
-        <div id="membersList" class="threeColGrid"></div>
+        <div id="membersList" class="oneColGrid"></div>
     </main>
     <footer id="footer"></footer>
 </body>
