made the header look nicer

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -20,8 +20,10 @@
 <body>
     <header>
         <img src="./images/dino_logo.jpeg" alt="Chamber of Commerce logo">
-        <h1>Naples, Utah</h1>
-        <p>Chamber of Commerce</p>
+        <div>
+            <h1>Naples, Utah</h1>
+            <p>Chamber of Commerce</p>
+        </div>
     </header>
     <nav id="navElement">
         <button id="navButton" type="button"></button>
