fixed the footer

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -35,8 +35,7 @@
         </ul>
     </nav>
     
-    <div id="darkMode"></div>
-    <main>
+    <main class="directoryMain">
         <div class="layoutButtons">
             <button id="oneColButton" type="button" value="oneColGrid">Single Column</button>
             <button id="threeColButton" class="selected" type="button" value="threeColGrid">Triple Column</button>
