--- a/chamber/index.html
+++ b/chamber/index.html
@@ -35,9 +35,12 @@
         </ul>
     </nav>
     
-    <div id="darkMode"></div>
     <main>
-
+        <div class="heroImage">
+            <div class="heroContent">
+                <button type="button" title="keynote">Keynote Tickets</button>
+            </div>
+        </div>
     </main>
     <footer id="footer"></footer>
 </body>
