got weather forecast box working

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -39,14 +39,25 @@
     
     <main>
         <section class="heroImage">
+            <h2>Hero</h2>
             <div class="heroContent">
-                <button type="button" title="keynote">Keynote Tickets</button>
-            </div>
+                <h3>Join the Naples, Utah Chamber of Commerce!</h3>
+                <button type="button" title="keynote">Join</button>
+            </div>           
         </section>
+        
         <section class="cityInfo">
+            <h2>City Information</h2>
+            <div class="infoBoxes">
+                <div id="events"></div>
+                <div id="currentWeather"></div>
+                <div id="weatherForecast"></div>
+            </div>
             <!-- Populated by JavaScript -->
         </section>
-        <section class="businessCards">
+        <section class="memberSpotlight">
+            <h2>Local Businesses</h2>
+            <div class="businessCards"></div>
             <!-- Populated by JavaScript -->
         </section>
     </main>
