Current Weather js is all working

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -50,8 +50,21 @@
             <h2>City Information</h2>
             <div class="infoBoxes">
                 <div id="events"></div>
-                <div id="currentWeather"></div>
-                <div id="weatherForecast"></div>
+                <div id="currentWeather">
+                    <h3>Current Weather</h3>
+                    <img id="currentWeatherIcon">
+                    <p id="currentWeatherTemp"></p>
+                    <p id="currentWeatherDescription"></p>
+                    <p id="currentWeatherHigh"></p>
+                    <p id="currentWeatherLow"></p>
+                    <p id="currentWeatherHumidity"></p>
+                    <p id="currentWeatherSunrise"></p>
+                    <p id="currentWeatherSunset"></p>
+            
+                </div>
+                <div id="weatherForecast">
+                    <h3>Weather Forecast</h3>
+                </div>
             </div>
             <!-- Populated by JavaScript -->
         </section>
