current weather is styled better now

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -49,18 +49,24 @@
         <section class="cityInfo">
             <h2>City Information</h2>
             <div class="infoBoxes">
-                <div id="events"></div>
+                <div id="events">
+                    <h3>Events</h3>
+                </div>
                 <div id="currentWeather">
                     <h3>Current Weather</h3>
-                    <img id="currentWeatherIcon">
-                    <p id="currentWeatherTemp"></p>
-                    <p id="currentWeatherDescription"></p>
-                    <p id="currentWeatherHigh"></p>
-                    <p id="currentWeatherLow"></p>
-                    <p id="currentWeatherHumidity"></p>
-                    <p id="currentWeatherSunrise"></p>
-                    <p id="currentWeatherSunset"></p>
-            
+                    <div class="currentWeatherDetails">
+                        <img id="currentWeatherIcon">
+                        <div id="currentWeatherText">
+                            <p id="currentWeatherTemp"></p>
+                            <p id="currentWeatherDescription"></p>
+                            <p id="currentWeatherHigh"></p>
+                            <p id="currentWeatherLow"></p>
+                            <p id="currentWeatherHumidity"></p>
+                            <p id="currentWeatherSunrise"></p>
+                            <p id="currentWeatherSunset"></p>
+                        </div>
+                        
+                    </div>
                 </div>
                 <div id="weatherForecast">
                     <h3>Weather Forecast</h3>
