improved styling a bit more

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div id="currentWeather">
                     <h3>Current Weather</h3>
-                    <div class="currentWeatherDetails">
+                    <div id="currentWeatherDetails">
                         <img id="currentWeatherIcon">
                         <div id="currentWeatherText">
                             <p id="currentWeatherTemp"></p>
