got rid of validation errors

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -55,7 +55,7 @@
                 <div id="currentWeather">
                     <h3>Current Weather</h3>
                     <div id="currentWeatherDetails">
-                        <img id="currentWeatherIcon">
+                        <img id="currentWeatherIcon" src="images/placeholder.png" alt="placeholder">
                         <div id="currentWeatherText">
                             <p id="currentWeatherTemp"></p>
                             <p id="currentWeatherDescription"></p>
