got a rough version of business cards added

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -72,12 +72,12 @@
                     <h3>Weather Forecast</h3>
                 </div>
             </div>
-            <!-- Populated by JavaScript -->
         </section>
         <section class="memberSpotlight">
             <h2>Local Businesses</h2>
-            <div class="businessCards"></div>
-            <!-- Populated by JavaScript -->
+            <div class="businessCards">
+                <!-- Populated by JavaScript -->
+            </div>
         </section>
     </main>
     <footer id="footer"></footer>
