fixed what I broke...

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,7 +20,7 @@
 <body>
     <div class="header">
         <header>
-            <img src="./chamber/images/dino_logo.jpeg" alt="Chamber of Commerce logo">
+            <img src="./images/dino_logo.jpeg" alt="Chamber of Commerce logo">
             <div>
                 <h1>Naples, Utah</h1>
                 <p>Chamber of Commerce</p>
