fixed join button

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,7 +42,7 @@
             <h2>Hero</h2>
             <div class="heroContent">
                 <h3>Join the Naples, Utah Chamber of Commerce!</h3>
-                <button type="button" title="keynote">Join</button>
+                <button type="button" title="keynote" id="joinButton">Join</button>
             </div>           
         </section>
         
