--- a/chamber/index.html
+++ b/chamber/index.html
@@ -31,8 +31,8 @@
             <ul class="menuLinks">
                 <li class="currentMenuItem"><a href="#" title="Home">Home</a></li>
                 <li><a href="./directory.html" title="Directory">Directory</a></li>
-                <li><a href="#" title="Join">Join</a></li>
-                <li><a href="#" title="Discover">Discover</a></li>
+                <li><a href="./join.html" title="Join">Join</a></li>
+                <li><a href="./discover.html" title="Discover">Discover</a></li>
             </ul>
         </nav>
     </div>
