--- a/chamber/index.html
+++ b/chamber/index.html
@@ -27,7 +27,7 @@
             </div>
         </header>
         <nav id="navElement">
-            <button id="navButton" type="button"></button>
+            <button id="navButton" type="button" aria-label="hamburger menu"></button>
             <ul class="menuLinks">
                 <li class="currentMenuItem"><a href="#" title="Home">Home</a></li>
                 <li><a href="./directory.html" title="Directory">Directory</a></li>
