--- a/chamber/join.html
+++ b/chamber/join.html
@@ -26,7 +26,7 @@
         </div>
     </header>
     <nav id="navElement">
-        <button id="navButton" type="button"></button>
+        <button id="navButton" type="button" aria-label="hamburger menu"></button>
         <ul class="menuLinks">
             <li><a href="./index.html" title="Home">Home</a></li>
             <li><a href="./directory.html" title="Directory">Directory</a></li>
