Did the modal learning assignment

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                 <button class="filterButton" value="CSE">CSE</button>
                 <button class="filterButton" value="WDD">WDD</button>
             </div>
+            <dialog id="courseDetails">
+                <div id="dialogDiv"></div>
+            </dialog>
             <div class="coursesList">
                 <!-- Courses to be inserted by JavaScript -->
             </div>
