began join form with styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <header>
-        <img src="images/profile_img.webp" alt="profile picture of Johnny Sanabria">
+        <img id="profileImage" src="images/profile_img.webp" alt="profile picture of Johnny Sanabria">
         <h1>Johnny Sanabria</h1>
     </header>
     <div class="hamburger">
