--- a/chamber/join.html
+++ b/chamber/join.html
@@ -35,6 +35,7 @@
         </ul>
     </nav>
     <main>
+        <h2>Join the Naples, Utah Chamber of Commerce!</h2>
         <form action="GET" action="thankyou.html">
             <label for="firstName"><input id="firstName" type="text" name="firstName" required autocomplete="given-name" title="First Name" placeholder="First Name"></label>
             <label for="lastName"><input id="lastName" type="text" name="lastName" required autocomplete="family-name" title="Last Name" placeholder="Last Name"></label>
@@ -42,19 +43,19 @@
             <label for="email"><input id="email" type="email" name="email" required autocomplete="email" title="Email" placeholder="john.doe@email.com"></label>
             <label for="phone"><input id="phone"type="tel" name="phone" required autocomplete="tel" title="Phone" placeholder="Phone Number"></label>
             <label for="orgName"><input id="orgName" type="text" name="orgName" required autocomplete="organization" title="Organization Name" placeholder="Business/Organization Name"></label>
+            <label for="orgDescription"><textarea rows="10" cols="30" name="orgDescription" id="orgDescription" name="orgDescription" title="Organization Description" placeholder="Description of Organization..."></textarea></label>
             
             <div class="membershipLevelInput">
                 <dialog id="membershipLevelModal">
                     <div id="dialogDiv"></div>
                 </dialog>
-                <p>Select your Membership Level:</p>
+                <p>Select your Membership Level (<span id="levelHelp">Help?</span>): </p>
                 
                 <label class="membershipBadges" for="levelBronze"><input type="radio" id="levelBronze" name="membershipLevel">Bronze🥉</label>
                 <label class="membershipBadges" for="levelSilver"><input type="radio" id="levelSilver" name="membershipLevel">Silver🥈</label>
                 <label class="membershipBadges" for="levelGold"><input type="radio" id="levelGold" name="membershipLevel">Gold🥇</label>
                 <label class="membershipBadges" for="levelNonProfit"><input type="radio" id="levelNonProfit" name="membershipLevel">Non-Profit😇</label>
             </div>
-            <label for="orgDescription">Organization description <br><textarea name="orgDescription" id="orgDescription" name="orgDescription" title="Organization Description"></textarea></label>
             <input type="datetime" id="timestamp" hidden >
             <input type="submit" value="Apply">
         </form>
