--- a/chamber/join.html
+++ b/chamber/join.html
@@ -36,7 +36,7 @@
     </nav>
     <main>
         <h2>Join the Naples, Utah Chamber of Commerce!</h2>
-        <form action="GET" action="thankyou.html">
+        <form method="GET" action="thankyou.html">
             <label for="firstName"><input id="firstName" type="text" name="firstName" required autocomplete="given-name" title="First Name" placeholder="First Name"></label>
             <label for="lastName"><input id="lastName" type="text" name="lastName" required autocomplete="family-name" title="Last Name" placeholder="Last Name"></label>
             <label for="orgTitle"><input id="orgTitle" type="text" name="orgTitle" required autocomplete="organization-title" title="Organization Title" placeholder="Organization Title"></label>
@@ -49,7 +49,7 @@
                 <dialog id="membershipLevelModal">
                     <div id="dialogDiv"></div>
                 </dialog>
-                <p>Select your Membership Level (<span id="levelHelp">Help?</span>): </p>
+                <p>Select your Membership Level (<span id="levelHelp">Help</span>): </p>
                 
                 <label class="membershipBadges" for="levelBronze"><input type="radio" id="levelBronze" name="membershipLevel">Bronze🥉</label>
                 <label class="membershipBadges" for="levelSilver"><input type="radio" id="levelSilver" name="membershipLevel">Silver🥈</label>
