--- a/chamber/join.html
+++ b/chamber/join.html
@@ -47,7 +47,35 @@
             
             <div class="membershipLevelInput">
                 <dialog id="membershipLevelModal">
-                    <div id="dialogDiv"></div>
+                    <div id="dialogDiv">
+                        <table>
+                            <tr>
+                                <th>Membership Level</th>
+                                <th>Description</th>
+                                <th>Monthly Fee</th>
+                            </tr>
+                            <tr>
+                                <td>Bronze</td>
+                                <td>Bronze Membership Description</td>
+                                <td>$35</td>
+                            </tr>
+                            <tr>
+                                <td>Silver</td>
+                                <td>Silver Membership Description</td>
+                                <td>$75</td>
+                            </tr>
+                            <tr>
+                                <td>Gold</td>
+                                <td>Gold Membership Description</td>
+                                <td>$125</td>
+                            </tr>
+                            <tr>
+                                <td>Non-Profit</td>
+                                <td>Non-Profit Membership Description</td>
+                                <td>$0</td>
+                            </tr>
+                        </table>
+                    </div>
                 </dialog>
                 <p>Select your Membership Level (<span id="levelHelp">Help</span>): </p>
                 
