made basic thank you page

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -12,10 +12,10 @@
     <meta property="og:title" content="Chamber of Commerce">
     <meta property="og:description" content="Chamber of Commerce join page for the WDD 231.">
     <meta property="og:url" content="https://johnnyasan.github.io/wdd231/chamber/join">
-    <script src="./scripts/join.js" defer></script>
-    <link rel="stylesheet" href="./styles/join.css">
+    <script src="./scripts/thankyou.js" defer></script>
+    <link rel="stylesheet" href="./styles/thankyou.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <!-- <link rel="icon" href="./images/favicon.ico"> -->
+    <link rel="icon" href="./images/favicon.ico">
 </head>
 <body>
     <header>
@@ -30,14 +30,12 @@
         <ul class="menuLinks">
             <li><a href="./index.html" title="Home">Home</a></li>
             <li><a href="./directory.html" title="Directory">Directory</a></li>
-            <li class="currentMenuItem"><a href="#" title="Join">Join</a></li>
+            <li class="currentMenuItem"><a href="./join.html" title="Join">Join</a></li>
             <li><a href="./discover.html" title="Discover">Discover</a></li>
         </ul>
     </nav>
     <main>
-        <form action="GET">
-            
-        </form>
+        <div id="results"></div>
     </main>
     <footer id="footer"></footer>
 </body>
