--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -15,7 +15,7 @@
     <script src="./scripts/directory.js" defer></script>
     <link rel="stylesheet" href="./styles/directory.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <!-- <link rel="icon" href="./images/favicon.ico"> -->
+    <link rel="icon" href="./images/favicon.ico">
 </head>
 <body>
     <header>
