--- a/chamber/join.html
+++ b/chamber/join.html
@@ -15,7 +15,7 @@
     <script src="./scripts/join.js" defer></script>
     <link rel="stylesheet" href="./styles/join.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <!-- <link rel="icon" href="./images/favicon.ico"> -->
+    <link rel="icon" href="./images/favicon.ico">
 </head>
 <body>
     <header>
@@ -39,7 +39,7 @@
         <form method="GET" action="thankyou.html">
             <label for="firstName"><input id="firstName" type="text" name="firstName" required autocomplete="given-name" title="First Name" placeholder="First Name"></label>
             <label for="lastName"><input id="lastName" type="text" name="lastName" required autocomplete="family-name" title="Last Name" placeholder="Last Name"></label>
-            <label for="orgTitle"><input id="orgTitle" type="text" name="orgTitle" required autocomplete="organization-title" title="Organization Title" placeholder="Organization Title"></label>
+            <label for="orgTitle"><input pattern="([a-z]|[A-Z]|[\s]|[\-]){7,}" id="orgTitle" type="text" name="orgTitle" required autocomplete="organization-title" title="Organization Title" placeholder="Organization Title"></label>
             <label for="email"><input id="email" type="email" name="email" required autocomplete="email" title="Email" placeholder="john.doe@email.com"></label>
             <label for="phone"><input id="phone"type="tel" name="phone" required autocomplete="tel" title="Phone" placeholder="Phone Number"></label>
             <label for="orgName"><input id="orgName" type="text" name="orgName" required autocomplete="organization" title="Organization Name" placeholder="Business/Organization Name"></label>
@@ -84,7 +84,7 @@
                 <label class="membershipBadges" for="levelGold"><input type="radio" id="levelGold" name="membershipLevel">Gold🥇</label>
                 <label class="membershipBadges" for="levelNonProfit"><input type="radio" id="levelNonProfit" name="membershipLevel">Non-Profit😇</label>
             </div>
-            <input type="datetime" id="timestamp" hidden >
+            <label for="timestamp" hidden><input name="timestamp" type="datetime" id="timestamp" hidden ></label>
             <input type="submit" value="Apply">
         </form>
     </main>
