--- a/chamber/join.html
+++ b/chamber/join.html
@@ -79,10 +79,10 @@
                 </dialog>
                 <p>Select your Membership Level (<span id="levelHelp">Help</span>): </p>
                 
-                <label class="membershipBadges" for="levelBronze"><input type="radio" id="levelBronze" name="membershipLevel">Bronze🥉</label>
-                <label class="membershipBadges" for="levelSilver"><input type="radio" id="levelSilver" name="membershipLevel">Silver🥈</label>
-                <label class="membershipBadges" for="levelGold"><input type="radio" id="levelGold" name="membershipLevel">Gold🥇</label>
-                <label class="membershipBadges" for="levelNonProfit"><input type="radio" id="levelNonProfit" name="membershipLevel">Non-Profit😇</label>
+                <label class="membershipBadges" for="levelBronze"><input type="radio" id="levelBronze" name="membershipLevel" value="Bronze">Bronze🥉</label>
+                <label class="membershipBadges" for="levelSilver"><input type="radio" id="levelSilver" name="membershipLevel" value="Silver">Silver🥈</label>
+                <label class="membershipBadges" for="levelGold"><input type="radio" id="levelGold" name="membershipLevel" value="Gold">Gold🥇</label>
+                <label class="membershipBadges" for="levelNonProfit"><input type="radio" id="levelNonProfit" name="membershipLevel" value="Non-Profit">Non-Profit😇</label>
             </div>
             <label for="timestamp" hidden><input name="timestamp" type="datetime-local" id="timestamp" hidden></label>
             <input type="submit" value="Apply">
