--- a/sourdough/siteplan.html
+++ b/sourdough/siteplan.html
@@ -7,7 +7,7 @@
 </head>
 <body id="sitePlan">
     <h1><b>Site Name: </b>Sourdough Beginner's Guide</h1>
-    <p><b>Description: </b>This site will serve as a starting guide for those interested in baking homemade sourdough bread. There will be recipes, guides, and nutritional information.</p>
+    <p><b>Description: </b>This site will serve as a starting guide for those interested in baking homemade sourdough bread. There will be recipes, guides, and a newsletter signup form.</p>
     <p><b>Scenarios: </b></p>
     <ul>
         <li>How do I create sourdough starter?</li>
