--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <ul>
             <li><a href="#" class="active">Home</a></li>
             <li><a href="./chamber/index.html">Chamber</a></li>
+            <li><a href="./sourdough/index.html">Sourdough</a></li>
             <li><a href="https://github.com/JohnnyASan">GitHub Profile</a></li>
             <li><a href="https://www.linkedin.com/in/johnny-sanabria-b9b34a133/">LinkedIn</a></li>
         </ul>           
