started discover page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="styles/normalize.css"> -->
-    <title>Discover Naples UT Chamber of Commerce</title>
+    <title>Discover Naples Utah</title>
     <meta name="author" content="Johnny Sanabria">
     <meta name="description" content="Chamber of Commerce discover page for WDD 231.">
     <meta property="og:image" content="https://www.skylinepress.com/images/xl/080522-UT-Moonshine-Arch-H2320.jpg">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Chamber of Commerce">
-    <meta property="og:description" content="Chamber of Commerce discover page for the WDD 231.">
+    <meta property="og:title" content="Discover Naples Utah">
+    <meta property="og:description" content="Naples UT Chamber of Commerce discover page for the WDD 231.">
     <meta property="og:url" content="https://johnnyasan.github.io/wdd231/chamber/discover">
     <script src="./scripts/discover.js" defer></script>
     <link rel="stylesheet" href="./styles/discover.css">
@@ -36,7 +36,25 @@
     </nav>
     
     <main>
-        
+        <div id="discoverContent">
+            <section class="discoverCard" id="welcomeText">
+                <h1>Welcome! Let us know if you have any questions.</h1>
+            </section>
+            <div class="sideBar">
+                <section class="discoverCard sideBarItem" id="sideBarItem1"><h2>Heading</h2></section>
+                <section class="discoverCard sideBarItem" id="sideBarItem2"><h2>Heading</h2></section>
+                <section class="discoverCard sideBarItem" id="sideBarItem3"><h2>Heading</h2></section>   
+            </div>
+            <section class="discoverCard imageBar">
+                <h2 hidden>Beautiful Photos of Naples Utah</h2>
+                <img src="./images/placeholder.webp" alt="Placeholderimage">
+                <img src="./images/placeholder.webp" alt="Placeholderimage">
+                <img src="./images/placeholder.webp" alt="Placeholderimage">
+                <img src="./images/placeholder.webp" alt="Placeholderimage">
+                <img src="./images/placeholder.webp" alt="Placeholderimage">
+                <img src="./images/placeholder.webp" alt="Placeholderimage">
+            </section>
+        </div>
     </main>
     <footer id="footer"></footer>
 </body>
