added some more content

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -41,8 +41,20 @@
                 <h1>Welcome! Let us know if you have any questions.</h1>
             </section>
             <div class="sideBar">
-                <section class="discoverCard sideBarItem" id="sideBarItem1"><h2>Heading</h2></section>
-                <section class="discoverCard sideBarItem" id="sideBarItem2"><h2>Heading</h2></section>
+                <section class="discoverCard sideBarItem" id="sideBarItem1">
+                    <h2>About Naples, Utah</h2>
+                    <p>Naples is a city located in Uintah County, Utah, 
+                       United States with a population of about 3,000 residents.
+                       Many beautiful hikes and adventures are less than 45 minutes away by car.
+                    </p>
+                </section>
+                <section class="discoverCard sideBarItem" id="sideBarItem2">
+                    <h2>Upcoming Event</h2>
+                    <figure>
+                        <img id="eventImage" src="./images/Alive-After-Five-FB-1251x464-2024.png" alt="Alive After 5 Event poster">
+                        <figcaption>Alive After 5: Idol Contest July 18th @ 6:30 pm at the Uintah Libray Park</figcaption>
+                    </figure>
+                </section>
                 <section class="discoverCard sideBarItem" id="sideBarItem3"><h2>Heading</h2></section>   
             </div>
             <section class="discoverCard imageBar">
