--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="styles/normalize.css"> -->
-    <title>Discover Naples Utah</title>
+    <title>Discover Naples - Naples Utah Chamber of Commerce</title>
     <meta name="author" content="Johnny Sanabria">
     <meta name="description" content="Chamber of Commerce discover page for WDD 231.">
     <meta property="og:image" content="https://www.skylinepress.com/images/xl/080522-UT-Moonshine-Arch-H2320.jpg">
